First phpstorm commit

--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
       })(jQuery); // end of jQuery name space
 
       var removeItem = function (id) {
+          alert(id);
+      };
+/*      var removeItem = function (id) {
           $.ajax({
               url: "remove",
               data: {
@@ -95,7 +98,7 @@
 
               }
           });
-      };
+      };*/
 
   </script>
 <!--
