--- a/index.html
+++ b/index.html
@@ -90,8 +90,11 @@
               cache: false,
               type: "GET",
               success: function (response) {
-                  alert(response);
-                  //Materialize.toast(response, 3000);
+                  restaurants = JSON.parse(response);
+                  document.getElementsByClassName("row center")[0].innerHTML = "";
+                  restaurants.forEach(function(entry) {
+                      document.getElementsByClassName("row center")[0].innerHTML += '<div class="row" dir="rtl"> <div class="col s12"> <div class="card blue-grey darken-1"> <div class="card-content white-text"> <span class="card-title">' + entry.name + '</span> <p>' + entry.location + '</p><p>' + entry.type + '</p> </div> <div class="card-action"> <a style="padding-left: 23px; font-size: 16px;" href="#" onclick="removeItem(\'' + entry._id + '\');">dddd</a></div> </div> </div></div>';
+                  });
               },
               error: function (xhr) {
 
