First phpstorm commit

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <nav class="orange lighten-1" role="navigation">
-    <div dir="rtl" class="nav-wrapper container" style="text-align:right; padding-right: 110px"><a id="logo-container" href="/" class="brand-logo">מסעדות</a>
+    <div dir="rtl" class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">מסעדות</a>
       <ul class="left hide-on-med-and-down">
         <li><a href="/add-item.html">הוסף מסעדה</a></li>
       </ul>
