--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <nav class="orange lighten-1" role="navigation">
     <div dir="rtl" class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">מסעדות</a>
       <ul class="left hide-on-med-and-down">
-        <li><a href="/add-item.html">הוסף מסעדה</a></li>
+        <li><a href="/add-item.html">הוסף מסעדה</a><hr></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="/add-item.html">הוסף מסעדה</a></li>
+        <li><a href="/add-item.html">הוסף מסעדה</a><hr></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu" style="font-size: x-large; margin-left: -10px"></i></a>
     </div>
