--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav class="orange lighten-1" role="navigation">
     <div dir="rtl" class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">מסעדות</a>
       <ul class="left hide-on-med-and-down">
-        <li><a href="/add-item.html">הוסף מסעדה</a><hr></li>
+        <li><a href="/add-item.html">הוסף מסעדה</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
