First phpstorm commit

--- a/public/sdarot.html
+++ b/public/sdarot.html
@@ -16,13 +16,13 @@
             type: "GET",
             success: function (response) {
                 console.log(response);
-                var parser = new DOMParser()
+/*                var parser = new DOMParser()
                         , doc = parser.parseFromString(response, "text/html");
                 var list = doc.getElementsByClassName("category_box");
                 list.forEach(function(series){
                     var obj = {Name:series.getElementsByClassName("lazy")[0].alt, Link:series.getElementsByTagName("a")[0].href, Image:series.getElementsByClassName("lazy")[0].src};
                     document.getElementsByTagName("body").innerHTML += JSON.stringify(obj);
-                });
+                });*/
             },
             error: function (xhr) {
 
