First phpstorm commit

--- a/public/sdarot.html
+++ b/public/sdarot.html
@@ -17,9 +17,9 @@
             cache: false,
             timeout: 30000,
             success: function (response) {
-                var parser = new DOMParser()
-                        , doc = parser.parseFromString(response, "text/html");
-                var list = doc.getElementsByClassName("category_box");
+/*                var parser = new DOMParser()
+                        , doc = parser.parseFromString(response, "text/html");*/
+                var list = response.getElementsByClassName("category_box");
                 list.forEach(function(series){
                     var obj = {Name:series.getElementsByClassName("lazy")[0].alt, Link:series.getElementsByTagName("a")[0].href, Image:series.getElementsByClassName("lazy")[0].src};
                     document.write(obj);
